feat: API for pinning charts and dashboards (#4174)
* feat: adding backend of pinning functionality

* feat: pinning api

* chore: rename method

* fix: break items table into two

* fix: resolve migration conflicts

* fix: migration unique constrains and nullable columns

* fix: add non nullable columns
